<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="show_newer_posts">New posts</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_server">Server</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="warning_no_login">No login</string>
    <string name="warning_no_password">No password</string>
    <string name="action_continue">Continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="logout_confirm_request">You are going \nto log off</string>
    <string name="error_no_authorization">You cannot create posts being anonymus</string>
    <string name="action_confirm_title">Action confirming</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_register">Register</string>
    <string name="warning_no_username">No username</string>
    <string name="warning_no_matching_password">Password does not match</string>
    <string name="notification_info">Information:</string>
    <string name="ad_description">ad</string>

</resources>