<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginEnd="@dimen/login_margin"
        android:visibility="invisible"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/server"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:hint="@string/prompt_server"
            android:inputType="text"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/port"
            android:layout_width="@dimen/field_min_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin"
            android:hint="@string/prompt_port"
            android:inputType="number"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginEnd="@dimen/login_margin"
        android:hint="@string/prompt_login"
        android:inputType="text"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginEnd="@dimen/login_margin"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/login_margin"
        android:enabled="true"
        android:text="@string/action_sign_in" />

</LinearLayout>
